<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddChatBook">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="책팅방 생성"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addchat_submit" />

    <EditText
        android:id="@+id/addtitle_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/title_shape"
        android:hint="책 제목(채팅방이름)을 입력해주세요"
        android:minWidth="350dp"
        android:padding="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/addex_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/result_shape"
        android:gravity="top"
        android:hint="책/채팅방에 대한 설명을 입력해주세요"
        android:maxWidth="350dp"
        android:maxLines="5"
        android:minWidth="350dp"
        android:minLines="4"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:scrollbars="vertical"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/addtitle_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/addtitle_editText"
        app:layout_constraintTop_toBottomOf="@+id/addtitle_editText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="책팅방 장르 선택"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/radiogroup"
        app:layout_constraintTop_toBottomOf="@+id/addex_editText" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <GridLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:columnCount="3"
            android:minWidth="350dp"
            android:orientation="vertical"
            android:rowCount="2">

            <RadioButton
                android:id="@+id/chat_genre1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill"
                android:layout_columnWeight="1"
                android:checked="true"
                android:text="@string/genre1" />
            <RadioButton
                android:id="@+id/chat_genre2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill"
                android:layout_columnWeight="1"
                android:text="@string/genre2" />
            <RadioButton
                android:id="@+id/chat_genre3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill"
                android:layout_columnWeight="1"
                android:text="@string/genre3" />
            <RadioButton
                android:id="@+id/chat_genre4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill"
                android:layout_columnWeight="1"
                android:text="@string/genre4" />
            <RadioButton
                android:id="@+id/chat_genre5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill"
                android:layout_columnWeight="1"
                android:text="@string/genre5" />
            <RadioButton
                android:id="@+id/chat_genre6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill"
                android:layout_columnWeight="1"
                android:text="@string/genre6" />

        </GridLayout>
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemlist_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:minWidth="350dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/radiogroup"
        app:layout_constraintStart_toStartOf="@+id/radiogroup"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup">

        <TextView
            android:id="@+id/book_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="책 정보 작성"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/book_infolist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_info">

            <LinearLayout
                android:id="@+id/input_itemlist1_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="책 제목"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/addbook_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:hint="책제목 작성" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/input_itemlist2_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="책 저자"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/addbook_writer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:hint="책 저자 입력" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/input_itemlist3_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="구매링크 "
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/addbook_link"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:hint="구매링크 입력" />
            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/input_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#FBF8F8"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:text="작성 완료"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/itemlist_box"
        app:layout_constraintStart_toStartOf="@+id/itemlist_box" />

    <ImageView
        android:id="@+id/back_to_home"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:paddingRight="250dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/addchat_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addchat_submit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:background="#00000000"
        android:padding="0dp"
        android:text="확인"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/addchat_submit" />
</androidx.constraintlayout.widget.ConstraintLayout>